--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
 }
-.header-nav-item {
+.header-nav-link {
     font: 500 16px / 1.5 "Roboto", sans-serif;
 letter-spacing: 0.02em;
 color: #2e2f42;
