--- a/css/styles.css
+++ b/css/styles.css
@@ -5,23 +5,30 @@ body {
 }
 
 .main-hero-btn:hover,
-.main-hero-btn:focus,
-a:hover,
-a:focus {
+a:hover {
     color: #404bbf;
 }
-a:focus {
-    color: #434455; 
-}
+
 .main-hero-btn {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background: #4d5ae5;
+    border-radius: 4px;
+padding: 16px 32px;
+width: 169px;
+height: 56px;
+    display: flex;
+align-items: flex-start;
+justify-content: flex-start;
+flex-direction: row;
+gap: 10px;
     cursor: pointer;
 }
 .header-contacts-adress a:hover,
 .header-contacts-adress a:focus {
-   color: #404bbf;
+   color: #434455; ;
 }
 a:focus {
-    color: #434455; 
+    color: #404bbf
 }
 
 
