--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ a:hover {
 }
 
 .main-hero-btn {
+    color: #fff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background: #4d5ae5;
     border-radius: 4px;
