--- a/css/styles.css
+++ b/css/styles.css
@@ -4,32 +4,6 @@ body {
 
 }
 
-.main-hero-btn:hover
-a:hover {
-    color: #404bbf;
-}
-
-.main-hero-btn {
-    color: #fff;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-background: #4d5ae5;
-    border-radius: 4px;
-padding: 16px 32px;
-width: 169px;
-height: 56px;
-    display: flex;
-align-items: flex-start;
-justify-content: flex-start;
-flex-direction: row;
-gap: 10px;
-    cursor: pointer;
-}
-.header-contacts-adress a:hover
- {
-   color: #404bbf; 
-
-}
-
 
 .header-nav-link {
     font: 500 16px / 1.5 "Roboto", sans-serif;
@@ -41,4 +15,14 @@ color: #2e2f42;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
+}
+.header-nav-list .header-nav-link {
+    color: #2e2f42;
+}
+.header-nav-list .header-nav-link:hover, .header-nav-list ..header-nav-link:focus {
+    color: #404bbf;
+
+}
+.header-nav-list .header-nav-link:active {
+    color: #404bbf;
 }
