--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ color: #4d5ae5;
 .header-nav-list .header-nav-link {
     color: #2e2f42;
 }
-.header-nav-list .header-nav-link:hover, .header-nav-list ..header-nav-link:focus {
+.header-nav-list .header-nav-link:hover, .header-nav-list .header-nav-link:focus {
     color: #404bbf;
 
 }
