--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: #2e2f42; ;
-
+    background: #fff;
 }
 
 
@@ -131,6 +131,7 @@ color: #2e2f42;
     font: 500 20px / 1.2 "Roboto", sans-serif;
 letter-spacing: 0.02em;
 color: #2e2f42;
+
 }
 .main-portfolio-text {
     font: 400 16px / 1.5 "Roboto", sans-serif;
@@ -142,4 +143,35 @@ color: #434455;
     font: 400 16px / 1.5 "Roboto", sans-serif;
 letter-spacing: 0.02em;
 color: #f4f4fd;
+}
+.main-team-img{
+    border-radius: 0 0 4px 4px;
+padding: 0px 0px 32px 0px;
+width: 264px;
+height: 380px;
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+background: #fff;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+gap: 32px;
+}
+ul {
+    list-style-type: none;
+}
+.main-team-list {
+    background: #f4f4fd
+}
+.header-nav {
+    background: #fff;
+}
+.main-hero {
+    background: #2e2f42;
+}
+.footer {
+    background: #2e2f42;
+}
+a {
+    text-decoration: none;
 }
