--- a/css/styles.css
+++ b/css/styles.css
@@ -31,21 +31,13 @@ color: #2e2f42;
 }
 .main-hero .main-hero-btn {
    color: #fff;
-   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+   
 background: #4d5ae5;
-border-radius: 4px;
-padding: 16px 32px;
-width: 169px;
-height: 56px;
-display: flex;
-align-items: flex-start;
-justify-content: center;
-flex-direction: row;
-gap: 10px; }
+}
 
 .main-hero .main-hero-btn:hover, .main-hero .main-hero-btn:focus {
     color: #fff;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+   
     background: #404bbf;
 
 }
@@ -145,17 +137,8 @@ letter-spacing: 0.02em;
 color: #f4f4fd;
 }
 .main-team-img{
-    border-radius: 0 0 4px 4px;
-padding: 0px 0px 32px 0px;
-width: 264px;
-height: 380px;
-box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    
 background: #fff;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-gap: 32px;
 }
 ul {
     list-style-type: none;
