--- a/css/styles.css
+++ b/css/styles.css
@@ -126,10 +126,11 @@ color: #434455;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-line-height: 1.2;
+line-height: 1.11;
 text-transform: capitalize;
 font-weight: 500;
-font-size: 20px;
+font-size: 36px;
+background-color: #FFFFFF;
 }
 .main-team-subtitle {
 text-align: center;
