--- a/css/styles.css
+++ b/css/styles.css
@@ -130,8 +130,12 @@ line-height: 1.11;
 text-transform: capitalize;
 font-weight: 500;
 font-size: 36px;
-background-color: #FFFFFF;
 }
+.main-team-item {
+    background-color: #FFFFFF;
+}
+
+
 .main-team-subtitle {
 text-align: center;
 color: #2e2f42;
